2015-02-06  Artur Malabarba  <bruce.connor.am@gmail.com>

	* doc-view.el (doc-view-kill-proc-and-buffer): Obsolete. Use
	`image-kill-buffer' instead.

2015-02-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/ldap.el (ldap-search-internal): Fix docstring.

2015-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* subr.el (define-error): The error conditions may be constant
	lists, so use `append' to concatenate them.

2015-02-06  Wolfgang Jenkner  <wjenkner@inode.at>

	* net/network-stream.el (network-stream-open-tls): Respect the
	:end-of-capability setting.

2015-02-05  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--sort-by-dependence): New
	function.  Return PACKAGE-LIST sorted by dependencies.
	(package-menu-execute): Use it to delete packages in order.
	(package--sort-deps-in-alist): New function.
	(package-menu-mark-install): Can mark dependencies.
	(package--newest-p): New function.
	(package-delete): Don't delesect when deleting an older version of
	an upgraded package.

	* emacs-lisp/package.el: Add missing (require 'subr-x)

2015-02-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/css-mode.el (scss-smie--not-interpolation-p): Vars can be
	hyphenated (bug#19263).

	* textmodes/css-mode.el (css-fill-paragraph): Fix filling in presence
	of variable interpolation (bug#19751).

2015-02-05  Era Eriksson  <era+emacs@iki.fi>

	* json.el (json-end-of-file): New error (bug#19768).
	(json-pop, json-read): Use it.

2015-02-05  Kelly Dean <kelly@prtime.org>

	* help-mode.el (help-xref-interned): Pass BUFFER and FRAME to
	`describe-variable'.

	* help-fns.el (describe-function-or-variable): New function.

	* help.el (help-map): Bind `describe-function-or-variable' to o.
	(help-for-help-internal): Document o key.

2015-02-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio-compat.el (eieio--defmethod): Use new
	special (:documentation ...) feature.
	* emacs-lisp/eieio-core.el (eieio-make-class-predicate)